--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,16 @@ version: "3.3"
 services:
   nginx:
     image: nginx
+    volumes:
+     - ./static:/usr/share/nginx/html:ro
+     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 8080:80
   ynote:
     build: .
     depends_on:
       - nginx
     volumes:
       - .:/build
+    init: true
 
