--- a/nginx.conf
+++ b/nginx.conf
@@ -33,7 +33,7 @@ http {
         server_name  localhost;
 
         location / {
-            root   /usr/share/nginx/html;
+            root   /usr/share/nginx/html/;
             index  index.html index.htm;
         }
 
