--- a/nginx.conf
+++ b/nginx.conf
@@ -33,12 +33,12 @@ http {
         server_name  localhost;
 
         location / {
-            root   /usr/share/nginx/html/;
+            root   /usr/share/nginx/ynote/;
             index  index.html index.htm;
         }
 
         location /api {
-            proxy_pass http://ynote:8080/api;
+            proxy_pass http://ynote:8081/api;
         }
 
         #error_page  404              /404.html;
