--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
 
+include /etc/nginx/modules/*.conf;
 
 events {
     worker_connections  1024;
@@ -33,12 +34,27 @@ http {
         server_name  localhost;
 
         location / {
-            root   /usr/share/nginx/ynote/;
+            root   /usr/share/ynote/html;
             index  index.html index.htm;
         }
 
+        location =/upload {
+            # Pass altered request body to this location
+            upload_pass   /api/upload;
+
+            # Store files to this directory
+            upload_store /uploads/tmp;
+            upload_cleanup 400 404 499 500-505;
+
+            # Set specified fields in request body
+            upload_set_form_field $upload_field_name.name "$upload_file_name";
+            upload_set_form_field $upload_field_name.content_type "$upload_content_type";
+            upload_set_form_field $upload_field_name.path "$upload_tmp_path";
+        }
+
+
         location /api {
-            proxy_pass http://ynote:8081/api;
+            proxy_pass http://ynote:8080/api;
         }
 
         #error_page  404              /404.html;
@@ -47,7 +63,7 @@ http {
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /usr/share/nginx/html;
+            root   /var/lib/nginx/html;
         }
 
     }
