upload files method, microhttpd for methods handling, huge refactoring

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,8 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    charset utf-8;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -50,11 +52,13 @@ http {
             upload_set_form_field $upload_field_name.name "$upload_file_name";
             upload_set_form_field $upload_field_name.content_type "$upload_content_type";
             upload_set_form_field $upload_field_name.path "$upload_tmp_path";
+            upload_pass_form_field "^.*$";
         }
 
 
         location /api {
-            proxy_pass http://ynote:8080/api;
+            proxy_pass http://ynote:8083/api;
+            #proxy_pass http://localhost:8083/api;
         }
 
         #error_page  404              /404.html;
