--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 hyper = { version = "0.14", features = ["full"] }
+serde_json = "1.0.85"
 tokio = { version = "1", features = ["full"] }
+url = "2.3.1"
 
 [build-dependencies]
 bindgen = "0.53.1"
