--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = "1.2.1"
 hyper = { version = "0.14", features = ["full"] }
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
