--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ hyper = { version = "0.14", features = ["full"] }
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 tokio = { version = "1", features = ["full"] }
+toml = "0.5.9"
 url = "2.3.1"
 
 [build-dependencies]
