--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 bytes = "1.2.1"
 hyper = { version = "0.14", features = ["full"] }
+multer = "2.0.4"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
+tera = "1.17.1"
 tokio = { version = "1", features = ["full"] }
 toml = "0.5.9"
 url = "2.3.1"
